# gyroprec

./: .gitignore  CMakeLists.txt  README.md  glw.cpp  glw.h  gui.cpp  gui.h  gyroskop.cpp  gyroskop.h  gyroskopnewton.cpp  gyroskopnewton.h  main.cpp  simulacia.kdev4
